# ForgeBench

./: .gitignore  LICENSE  README.md
conv/: DRAM_1.txt  DRAM_2.txt  DRAM_3.txt  DRAM_4.txt  DRAM_5.txt  activations_template.cpp  adaptive_avgpool_template.cpp  auto_generate_json.py  batch_norm_template.cpp  config.json  conv_template.cpp  gen_configs.py  generate_code.py  generate_top.py  hls_synth_utilization.csv  launch_hls.py  matrix_add_template.cpp  maxpool_template.cpp  merged_block_design.cpp  merged_conv_C_code.cpp  out.txt  parse_synth_resource_utlization.py  resnet18_3_3_256_relu_downsample.json  resnet50_128_block2.json  resnet50_128_block2_downsample.json  resnet50_256_block3.json  resnet50_512_block4.json  run_hls.tcl  run_hls_configs.py  tb_top.cpp  top.cpp  top.h
gemm/: 2D_activations_template.cpp  DRAM_1.txt  DRAM_10.txt  DRAM_11.txt  DRAM_12.txt  DRAM_2.txt  DRAM_3.txt  DRAM_4.txt  DRAM_5.txt  auto_generate_json.py  display_synth.py  dot_product_template.cpp  gemm_unit_tests.py  gen_configs.py  generate_code.py  hls_org_synth_utilization.csv  hls_utilization.csv  out.txt  parse_impl_resource_utlization.py  parse_resource_utlization.py  parse_synth_resource_utlization.py  run_hls.tcl  run_hls_configs.py  tb_top.cpp  test_gemm.py  top.cpp  top.h
llm/: activation_template.cpp  auto_generate_json.py  dropout_template.cpp  elementwise_mult_template.cpp  gen_configs.py  generate_code.py  out.txt  (+13 more)
merged_conv/compile/project_1/solution1/impl/misc/drivers/conv_via_tiling_v1_0/src/: CMakeLists.txt  Makefile  xconv_via_tiling.h  xconv_via_tiling_sinit.c
(+565 files in other folders)
